--- a/hello/hello.html
+++ b/hello/hello.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DavTech Journal</title>
+    <title>The KampalaTimes</title>
     <style>
         :root {
             --ink: #1b1b1b;
